--- a/index.html
+++ b/index.html
@@ -198,23 +198,21 @@
   position: relative;
   justify-content: center;
   align-items: center;
-  width: 62px;
-  height: 61px;
-  font-size: 9px;
+  width: 5.7rem;
+  height: 35px;
+  font-size: 14px;
   font-family: 'arial black';
-  border-radius: 50%;
-  background: -webkit-linear-gradient(#ff3006 0%,#ff0 100%); 
-  border: 0.1rem solid #dd346faa;
-  color:darkblue;
-  padding: 3px;
-  margin-top: 9px;
-  margin-left: -1.96rem;
+  background: transparent; 
+  border: 0.12rem solid #747d9794;
+  color:red;
+  padding: 8px;
+  margin-top: 20px;
 }
 
 .TYK1:hover{
-  transform: rotate(360deg);
-  transition: 0.4s ease-in;
-  box-shadow: -1px 0.15px 0.2rem 1px rgb(99, 16, 45);
+  
+  transition: 0.18s ease-in;
+  box-shadow: 4px 4px 0.3rem 0 rgba(100, 100, 100, 0.955);
 }
 
           .navbar0{
@@ -2249,6 +2247,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
+
 
 
 
