--- a/index.html
+++ b/index.html
@@ -210,8 +210,10 @@
 }
 
 .TYK1:hover{
-  
-  transition: 0.18s ease-in;
+  color:green;
+  border-bottom: 0.15rem solid #000;
+  border-right: 0.15rem solid #000;
+  transition: 0.17s ease-in;
   box-shadow: 4px 4px 0.3rem 0 rgba(100, 100, 100, 0.955);
 }
 
@@ -2247,6 +2249,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
+
 
 
 
