--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
           }
 
           .myDiv:hover{
-            border-bottom: 1rem solid #000;
+            border-bottom: 1rem solid green;
             color: red;
            transition: 0.28s ease-in;
       
@@ -305,7 +305,7 @@
           }
 
           .myDiv1:hover{
-            border-bottom: 1rem solid #000;
+            border-bottom: 1rem solid green;
             color: red;
             transition: 0.28s ease-in;
           }
@@ -326,7 +326,7 @@
             }
 
           .myDiv2:hover{
-            border-bottom: 1rem solid #000;
+            border-bottom: 1rem solid green;
             color: red;
             transition: 0.28s ease-in;
           }
@@ -347,7 +347,7 @@
            }
 
           .myDiv3:hover{
-            border-bottom: 1rem solid #000;
+            border-bottom: 1rem solid green;
             color: red;
             transition: 0.28s ease-in;
           }
@@ -368,7 +368,7 @@
             }
 
           .myDiv6:hover{
-            border-bottom: 1rem solid #000;
+            border-bottom: 1rem solid green;
             color: red;
             transition: 0.28s ease-in;
           }
@@ -2249,14 +2249,4 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
 
