--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
   position: relative;
   justify-content: center;
   align-items: center;
-  width: 5.7rem;
+  width: auto;
   height: 35px;
   font-size: 13.5px;
   font-family: 'arial black';
@@ -243,7 +243,7 @@
 
           .Joint-Point{
             display: grid;
-            grid-template-columns: 0.25fr 0.25fr 1fr;
+            grid-template-columns: 0.45fr 0.5fr 1.75fr;
             justify-content: space-between;
             justify-items: center;
             width: 100%;
@@ -330,28 +330,7 @@
             color: red;
             transition: 0.28s ease-in;
           }
-
-          .myDiv3{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
-            height: 40px;
-            width: 100%;
-            background: transparent;
-            color: rgba(0, 0, 173, 0.972);
-            font-family:Verdana, Geneva, Tahoma, sans-serif;
-            font-size: 18px;
-            margin-top: 1.15rem;
-           }
-
-          .myDiv3:hover{
-            border-bottom: 1rem solid green;
-            color: red;
-            transition: 0.28s ease-in;
-          }
-
+          
           .myDiv6{
             display: flex;
             flex-direction: column;
@@ -376,7 +355,7 @@
 
           .Unyfy{
             display: grid;
-            grid-template-rows: repeat(0.5fr,7);
+            grid-template-rows: repeat(1fr,7);
             justify-content: center;
             justify-items: center;
           }
@@ -1424,12 +1403,6 @@ function myFunction() {
             </div>
             </a>
 
-            <a href="https://www.wfp.org/countries/burkina-faso" target="blank"> 
-                <div  class="myDiv3">
-                  <b>Painting</b>
-                </div>
-            </a>
-
           <a href="mailto:gabrielkouss2001@yahoo.fr"> 
             <div  class="myDiv6">
               <b>Contact</b>
@@ -2249,6 +2222,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
+
 
 
 
