--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@ animation: auto 12s infinite ease-in;
   display: grid;
   grid-template-columns: 0.5fr 1.5fr;
   justify-content: space-between;
-  column-gap: 0.25rem;
+  column-gap: 1rem;
   justify-items: center;
   width: 100%;
   height: auto;
@@ -1758,7 +1758,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
 <div class="NL">
 
   <div class="Noel">
-    <div style="padding: 5px; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; text-align: left; line-height: 20px; color:rgb(0, 156, 203); font-size: 19.45px;">
+    <div style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; text-align: left; line-height: 21px; color:rgb(3, 118, 225); font-size: 19.45px;">
       Noël est une célébration généralement adorée par beaucoup d'enfants. Pour ce faire Tiki N'Yiki organisait un arbre de Noël à l'approche de chaque 25 décembre (Jour de Nativité) pendant lequel
       les enfants étaient invités à un repas autour duquel une sensibilisation sur le handicap et l'inclusion est tenue et par la suite des questions sont posées afin de 
       recueillir leurs diverses réactions. 
@@ -2222,6 +2222,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
+
 
 
 
