--- a/index.html
+++ b/index.html
@@ -286,9 +286,9 @@
           }
 
           .myDiv:hover{
-            border-bottom: 1rem solid green;
+            border-bottom: 1rem solid rgb(90, 216, 6);
             color: red;
-           transition: 0.28s ease-in;
+            transition: 0.25s ease-in;
       
           }
 
@@ -308,9 +308,9 @@
           }
 
           .myDiv1:hover{
-            border-bottom: 1rem solid green;
+            border-bottom: 1rem solid rgb(90, 216, 6);
             color: red;
-            transition: 0.28s ease-in;
+            transition: 0.25s ease-in;
           }
 
           .myDiv2{
@@ -329,9 +329,9 @@
             }
 
           .myDiv2:hover{
-            border-bottom: 1rem solid green;
+            border-bottom: 1rem solid rgb(90, 216, 6);
             color: red;
-            transition: 0.28s ease-in;
+            transition: 0.25s ease-in;
           }
           
           .myDiv6{
@@ -350,9 +350,9 @@
             }
 
           .myDiv6:hover{
-            border-bottom: 1rem solid green;
+            border-bottom: 1rem solid rgb(90, 216, 6);
             color: red;
-            transition: 0.28s ease-in;
+            transition: 0.25s ease-in;
           }
 
 
@@ -2226,6 +2226,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
+
 
 
 
