--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0.25px 1.5rem 0.14px #61616170;
+                 box-shadow: 0 0.25px 1.35rem 0.14px rgba(198, 198, 198, 0.916);
                  border-bottom: 5.30rem solid #ffffff;  
           }
           
@@ -2226,6 +2226,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
+
 
 
 
