--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
           padding: 13px; 
           font-size: 1.25rem; 
           font-family: 'arial black'; 
+          border-top: 0.1rem solid rgb(99, 97, 253);
           border-bottom-left-radius: 50rem;
           border-bottom-right-radius: 50rem;
          }
@@ -2226,6 +2227,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
+
 
 
 
