--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       grid-template-rows: 0.85fr 0.8fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: rgba(5, 2, 166, 0.922);
+                 background: rgba(5, 2, 184, 0.951);
                  width: 100%;
                  height: 115px;
                  object-fit: cover;
@@ -258,16 +258,15 @@
           flex-direction: column; 
           justify-content: center; 
           align-items: center; 
-         
-          background: -webkit-linear-gradient(rgba(5, 2, 166, 0.963), rgba(5, 2, 166, 0.486));
-          color:#fff; 
+          background: -webkit-linear-gradient(rgba(5, 2, 166, 0.963), rgba(5, 2, 166, 0.523));
+          color:chartreuse; 
           width: auto; 
           height: 74.48px; 
           padding: 13px; 
           font-size: 1.1rem; 
           margin-top: -0.19rem;
           font-family: 'arial black'; 
-          border-top: 0.1rem solid rgb(99, 97, 253);
+          border-top: 0.1rem solid rgb(89, 86, 255);
           border-bottom-left-radius: 50rem;
           border-bottom-right-radius: 50rem;
          }
@@ -1280,7 +1279,7 @@ transition: 0.26s linear;
 
 </style>
 
-    <title>Tik-Yik.html</title>                              
+    <title>accueil.html</title>                              
 </head>
 
 <body>
@@ -1374,7 +1373,7 @@ function myFunction() {
       <div class="Joint-Point">
 
       <a href="#"><div class="YIKI">
-        <p style="margin-top: -1rem;">TIKI N'YIKI</p>
+        <p style="margin-top: 3px;">TIKI N'YIKI</p>
                 </div>
               </a>
 
@@ -2229,17 +2228,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
 
 
 
