--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0.25px 1.35rem 0.14px rgba(198, 198, 198, 0.916);
+                 box-shadow: 0 0.15px 1.26rem 0.14px rgba(212, 212, 212, 0.552);
                  border-bottom: 5.30rem solid #ffffff;  
           }
           
@@ -227,7 +227,7 @@
             justify-items: center;
             column-gap: 1rem;
             width: 100%; 
-            height: 124px; 
+            height: 126px; 
             background: #e4e4e4ee;
             border-bottom: 0.5rem solid rgba(255, 85, 0, 0.815);
           }
@@ -259,7 +259,7 @@
           justify-content: center; 
           align-items: center; 
           background: -webkit-linear-gradient(rgba(5, 2, 166, 0.963), rgba(5, 2, 166, 0.523));
-          color:chartreuse; 
+          color:cyan; 
           width: auto; 
           height: 74.48px; 
           padding: 13px; 
@@ -2228,24 +2228,6 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
