--- a/index.html
+++ b/index.html
@@ -203,12 +203,12 @@
   align-items: center;
   width: auto;
   height: 35px;
-  font-size: 13.5px;
+  font-size: 13.85px;
   font-family: 'arial black';
   background: transparent; 
   border: 0.12rem solid #0820685e;
   color:red;
-  padding: 10px;
+  padding: 13px;
   margin-top: 20px;
 }
 
@@ -1804,7 +1804,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         Certains handicapés n'ont pas de moyens financiers pour s'offrir de moyens de déplacements comme des tricycles. Elles n'ont pas d'aides financières ou de dotations d'équipements auxiliaires de l'état. Certain-es vivent isolé-es dans des coins réculés en campagne et n'ont ni voiture, ni moto ou même un tricycle pour se déplacer. 
         <br>
         <br>
-        <a href="https://png-library.net/images/77-770631_parents-of-seniors-black-and-gold-graduation-cap.png" target="_blank">
+        <a href="https://thumbs.dreamstime.com/b/golden-graduation-cap-diploma-d-illustration-isolated-white-background-36184349.jpg" target="_blank">
         <div class="Ecole">
 
         <div class="AK">
@@ -2228,6 +2228,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
+
 
 
 
