--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@ animation: auto 12s infinite ease-in;
   font-family: 'verdana';
   font-size: 13.5px;
   line-height: 21px;
-  color: rgba(45, 45, 45, 0.934);
+  color: rgba(38, 38, 38, 0.948);
   word-spacing: 1.5px;
   opacity: 0.98;
   text-align: left;
@@ -2172,10 +2172,11 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                       En 2017 il était obligé de s'exiler au Canada pour des raisons sécuritaires si bien que certaines activités de Tiki N'Yiki y compris le volet EDUCATION ont été interrompues mais vont être redéfinies si les conditions sont réunies. 
                       <br>
                       <br>
-                      Présentement résident permanent Canadien, il se reconstruit une nouvelle vie. Entre autres, il apprend à écrire du code informatique tout en souhaitant se former pour mieux développer ce site web et présenter sa vision pour Tiki N'Yiki. 
+                      Résident permanent Canadien, il se reconstruit une nouvelle autre vie. Entre autres, il écrit ses mémoire et apprend à écrire du code informatique tout en souhaitant se former aux I-Tech sciences et être bien établi. Il est en train de coder ce site web et présenter sa vision pour Tiki N'Yiki. 
                       <br>
-                      Néanmoins Gabriel veut créer une fondation dont le but sera de supporter vigoureusement l'éducation et l'inclusion sociale des personnes handicapées afin de leur créer des opportunités pour qu'elles puissent mieux s'intégrer dans leurs communautés respectives <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank"> au Burkina Faso.</a>
-                     Gabriel est passionné de photographie, d'histoire, de géographie, d'architecture, de football (soccer) et de hockey sur glace.
+                      <br>
+                      Ainsi Gabriel veut créer une fondation dont le but sera de supporter vigoureusement l'éducation et l'inclusion sociale des personnes handicapées afin de leur créer des opportunités d'inclusion sociale dans leurs communautés <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank"> au Burkina Faso.</a>
+                     Il est passionné de photographie, d'histoire, de géographie, d'architecture, de football (soccer) et de hockey sur glace.
                     </p>      
       </div>
 
@@ -2228,6 +2229,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
