--- a/index.html
+++ b/index.html
@@ -2056,7 +2056,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <div>
         <img src="https://zupimages.net/up/22/34/c7h6.jpg" alt="Vivres à distribuer aux étudiant-es handicapé-es">
         <figure>
-          <figcaption style=" color:#017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: -1px;">
+          <figcaption style=" color:#0177fefa; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 14px; text-align: left;">
             Avenue d'Oubritenga - Ouagadougou
             </figcaption>
     </figure>
@@ -2066,8 +2066,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       <div class="spag">
         <img src="https://www.zupimages.net/up/22/42/mh4v.jpg" alt="Vivres à distribuer aux étudiant-es handicapé-es">
         <figure>
-          <figcaption style=" color:#017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: -1px;">
-            Un plat de spaguetti 
+          <figcaption style=" color:#0177fefa; font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 14px; text-align: left;">
+            Les Uns Mangent à leur faim pendant que les Autres Meurent de faim
             </figcaption>
     </figure>
     
@@ -2176,7 +2176,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                       <br>
                       <br>
                       Ainsi Gabriel veut créer une fondation dont le but sera de supporter vigoureusement l'éducation et l'inclusion sociale des personnes handicapées afin de leur créer des opportunités d'inclusion sociale dans leurs communautés <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank"> au Burkina Faso.</a>
-                     Il est passionné de photographie, d'histoire, de géographie, d'architecture, de football (soccer) et de hockey sur glace.
+                     Il est passionné de la nature, de photographie, d'histoire, de géographie, d'architecture, de cyclisme, de football (soccer) et de hockey sur glace.
                     </p>      
       </div>
 
@@ -2201,7 +2201,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
   <a href="#Top">
     <div class="SPan">
-        <span style="justify-self: center;"> <b>Haut De Page</b></span>
+        <span style="justify-self: center;"> <b>Remonter La Page</b></span>
     </div>
 </a>
 </div>
@@ -2229,6 +2229,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
+
 
 
 
