--- a/index.html
+++ b/index.html
@@ -1108,7 +1108,7 @@ a:visited{
 }
 .DUQUE1{
   display: grid; 
-  grid-template-columns: 0.5fr 0.5fr;
+  grid-template-columns: 1fr 1fr;
   justify-content: space-between;
   justify-items: center;
   column-gap: 0.5rem;
@@ -1120,7 +1120,7 @@ a:visited{
 
 .ORDI1 img{
 width: 100%;
-height: 220px;
+height: 250px;
 }
 
 .ORDI1:hover{
@@ -1130,7 +1130,7 @@ height: 220px;
 
 .ORDI2 img{
 width: 100%;
-height: 220px;
+height: 250px;
 }
 
 .ORDI2:hover{
@@ -1151,7 +1151,7 @@ height: 220px;
 
 .HLTHY{
   display: grid;
-  grid-template-rows: 0.2fr 0.25fr;
+  grid-template-rows: 0.49fr 0.25fr;
   background: #f9f9f90d;
     justify-items: center;
     justify-content: space-between;
@@ -1581,8 +1581,8 @@ function myFunction() {
           </p>
         
 
-    <p style="margin-top: -4px;">Literallement traduit, Tiki N'Yiki signifie de s'appuyer sur quelqu'un-e ou sur quelque chose afin de se lever. Mais à travers un angle philosophique, 
-      Tiki N'Yiki veut dire que chaque personne a besoin d'un appui soit sur quelqu'un-e ou sur quelque chose pour se faire, pour se construire, pour s'éléver et/ou pour s'affirmer. Cette philosophie inclut aussi la personne handicapée parce que <b> le handicap n'est pas une fatalité.</b>
+    <p style="margin-top: -4px;">Literallement traduit, Tiki N'Yiki signifie de s'appuyer sur quelqu'un-e et/ou quelque chose afin de se lever. Mais à travers un angle philosophique, 
+      Tiki N'Yiki veut dire que chaque personne a besoin d'un appui soit sur quelqu'un-e ou sur quelque chose pour se faire, pour se construire, pour se lever, pour s'éléver et/ou s'affirmer. Cette philosophie inclut aussi la personne handicapée parce que <b> le handicap n'est pas une fatalité.</b>
     </p>
       <hr style="color: rgb(13, 31, 136); justify-self: center;"> 
            
@@ -2229,6 +2229,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
+
 
 
 
