--- a/index.html
+++ b/index.html
@@ -2172,10 +2172,10 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                       En 2017 il était obligé de s'exiler au Canada pour des raisons sécuritaires si bien que certaines activités de Tiki N'Yiki y compris le volet EDUCATION ont été interrompues mais vont être redéfinies si les conditions sont réunies. 
                       <br>
                       <br>
-                      Résident permanent Canadien, il se reconstruit une nouvelle autre vie. Entre autres, il écrit ses mémoires et apprend à écrire du code informatique tout en souhaitant se former aux I-Tech sciences et être bien établi. Il est en train de coder ce site web et présenter sa vision pour Tiki N'Yiki. 
+                      Résident permanent Canadien, il se reconstruit une nouvelle autre vie. Entre autres, il écrit ses mémoires et apprend à écrire du code informatique tout en souhaitant se former aux I-Tech sciences et être bien établi. Il est en train de coder ce site web pour mieux présenter sa vision pour Tiki N'Yiki. 
                       <br>
                       <br>
-                      Ainsi Gabriel veut créer une fondation dont le but sera de supporter vigoureusement l'éducation et l'inclusion sociale des personnes handicapées afin de leur créer des opportunités d'inclusion sociale dans leurs communautés <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank"> au Burkina Faso.</a>
+                      Ainsi Gabriel veut créer une fondation dont le but sera de supporter vigoureusement l'éducation et l'inclusion sociale des personnes handicapées afin de leur créer des opportunités dans leurs communautés <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank"> au Burkina Faso.</a>
                      Il est passionné de la nature, de photographie, d'histoire, de géographie, d'architecture, de cyclisme, de football (soccer) et de hockey sur glace.
                     </p>      
       </div>
@@ -2229,6 +2229,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
+
 
 
 
