--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             width: 100%; 
             height: 126px; 
             background: #a3a7fd3e;
-            border-bottom: 0.5rem solid rgba(255, 85, 0, 0.815);
+            border-bottom: 0.6rem solid rgba(255, 85, 0, 0.815);
           }
           .BIEN{
             display: grid;
@@ -484,7 +484,7 @@ hr{
     padding: 20px;
 }
 ::-webkit-scrollbar-thumb{
-    background: -webkit-linear-gradient(#0ab9ff 50%, orangered 50%);
+    background: -webkit-linear-gradient(#0ab9ff 50%, rgba(255, 85, 0, 0.815) 50%);
     width: 12px;
     height: 30px;
     border-bottom-left-radius: 0.5rem;
@@ -2229,6 +2229,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
+
 
 
 
