--- a/index.html
+++ b/index.html
@@ -1387,7 +1387,7 @@ function myFunction() {
 
             <div class="Unify"> 
 
-        <a href="https://www.education.gov.bf/accueil">
+        <a href="https://www.education.gov.bf/accueil" target="_blank">
         <div class="myDiv">
           <b>Education</b>
         </div>
@@ -2229,6 +2229,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
+
 
 
 
