--- a/index.html
+++ b/index.html
@@ -2101,10 +2101,10 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
           <br>
           C'est pourquoi le changement climatique fait partie des objectifs cruciaux de Tiki N'Yiki .
         
-       <br>De 2010 à 2011, Tiki N'Yiki a organisé pluseurs évènements en marge de la lutte contre le changement climatique. Entre autres il y avait des séances d'éducation, de sensibilisation et de conscientisation par rapport à la pollution des sacs plastiques, pourquoi c,est important de nettoyer ces sacs plastiques , inciter des opérations de plantations et d'entretien d'arbres pour contribuer à dimunuer l'avancée du désert tout en renforcant l'effet de la photosynthèse. 
+       <br>De 2010 à 2011, Tiki N'Yiki a organisé plusieurs évènements en marge de la lutte contre le changement climatique. Entre autres il y avait des séances d'éducation, de sensibilisation et de conscientisation sur la pollution des sacs plastiques, pourquoi c'est important de nettoyer ces sacs plastiques , tenir des opérations de plantations et d'entretien d'arbres pour contribuer à dimunuer l'avancée du désert tout en renforcant l'effet de la photosynthèse. 
        <br>
        <br>
-       Avant chaque séance de nettoyage la condition sine quanon est d'impregner aux participants particulierièment les enfants la notion des changements climatiques et quelles étaient ses conséquences sur la planète et plus particulièrement sur nous-mêmes entant qu'humains.
+       Avant chaque séance de nettoyage la condition sine quanon est d'imprégner aux participants particulierièment les enfants la notion de changement climatique et quelles sont ses conséquences sur la planète et plus particulièrement sur nous-mêmes entant qu'humains.
       </div>
 
       <div class="k1">
@@ -2229,6 +2229,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
