--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
           flex-direction: column; 
           justify-content: center; 
           align-items: center; 
-          background: -webkit-linear-gradient(rgba(5, 2, 166, 0.963), rgba(5, 2, 166, 0.523));
+          background: -webkit-linear-gradient(rgba(4, 1, 192, 0.963), rgba(4, 1, 192, 0.425));
           color:cyan; 
           width: auto; 
           height: 74.48px; 
@@ -269,6 +269,12 @@
           border-top: 0.1rem solid rgb(89, 86, 255);
           border-bottom-left-radius: 50rem;
           border-bottom-right-radius: 50rem;
+         }
+
+         .YIKI:hover{
+          background: -webkit-linear-gradient(orangered 0%, yellow 100%);
+          transition: 0.66s ease;
+          color: #000;
          }
 
           .myDiv{
@@ -2229,6 +2235,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
+
 
 
 
