--- a/index.html
+++ b/index.html
@@ -1389,7 +1389,7 @@ function myFunction() {
       <a href="#Milieu">
           
         <div class="TYK1">
-        Accadémie TY
+        Accadémie TYK
           </div>
             
         </a>
@@ -2273,6 +2273,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
