--- a/index.html
+++ b/index.html
@@ -185,14 +185,14 @@
       grid-template-rows: 0.85fr 0.8fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: rgba(71, 100, 244, 0.944);
+                 background: rgba(63, 95, 254, 0.944);
                  width: 100%;
                  height: 115px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0.15px 1.2rem 0.1px rgba(210, 210, 210, 0.608);
+                 box-shadow: 0 0 1.7rem 1px rgba(174, 173, 173, 0.687);
                  border-bottom: 5.26rem solid #ffffff;  
           }
           
@@ -2285,6 +2285,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
