--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
           .Joint-Point{
             display: grid;
-            grid-template-columns: 0.45fr 0.3fr 2fr;
+            grid-template-columns: 0.52fr 0.54fr 2fr;
             justify-content: space-between;
             justify-items: center;
             width: 100%;
@@ -1459,7 +1459,7 @@ function myFunction() {
 
             <div class="myDivT">
               
-              <b>Changement Climatique</b>
+              <b>Climat</b>
               
             </div>
           </a>
@@ -2333,6 +2333,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
