--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
   font-family: 'arial black';
   background: transparent; 
   border: 0.12rem solid #0820685e;
+  border-radius: 2rem;
   color:red;
   padding: 6px;
   margin-top: 20px;
@@ -285,6 +286,7 @@
             height: 40px;
             width: 100%;
             background: transparent;
+            border-radius: 2rem;
             border: 0.12rem solid #0820685e;
             color:red;
             margin-top: 1.25rem;
@@ -309,6 +311,7 @@
             height: 40px;
             width: 100%;
             background: transparent;
+            border-radius: 2rem;
             border: 0.12rem solid #0820685e;
             color:red;
             margin-top: 1.25rem;
@@ -332,6 +335,7 @@
             height: 40px;
             width: 100%;
             background: transparent;
+            border-radius: 2rem;
             border: 0.12rem solid #0820685e;
             color:red;
             margin-top: 1.25rem;
@@ -354,6 +358,7 @@
             cursor: pointer;
             height: 40px;
             width: 100%;
+            border-radius: 2rem;
             background: transparent;
             border: 0.12rem solid #0820685e;
             color:red;
@@ -382,6 +387,7 @@
             font-size: 16px;
             height: 40px;
             width: 100%;
+            border-radius: 2rem;
             background: transparent;
             }
 
@@ -2333,6 +2339,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
