--- a/index.html
+++ b/index.html
@@ -215,9 +215,12 @@
 }
 
 .TYK1:hover{
-  border-bottom: 1rem solid rgb(40, 203, 3);
-            color: red;
-            transition: 0.3s ease-in;
+  border-radius: 2rem;
+            border: 0.18rem solid #04123cac;
+            background: orangered;
+            border-bottom: 1rem solid rgb(40, 203, 3);
+            color: yellow;
+            transition: 0.27s ease-in;
 }
 
           .navbar0{
@@ -296,9 +299,12 @@
           }
 
           .myDiv:hover{
+            border-radius: 2rem;
+            border: 0.18rem solid #04123cac;
+            background: orangered;
             border-bottom: 1rem solid rgb(40, 203, 3);
-            color: red;
-            transition: 0.3s ease-in;
+            color: yellow;
+            transition: 0.27s ease-in;
       
           }
 
@@ -321,9 +327,12 @@
           }
 
           .myDiv1:hover{
+            border-radius: 2rem;
+            border: 0.18rem solid #04123cac;
+            background: orangered;
             border-bottom: 1rem solid rgb(40, 203, 3);
-            color: red;
-            transition: 0.3s ease-in;
+            color: yellow;
+            transition: 0.27s ease-in;
           }
 
           .myDiv2{
@@ -345,9 +354,12 @@
             }
 
           .myDiv2:hover{
+            border-radius: 2rem;
+            border: 0.18rem solid #04123cac;
+            background: orangered;
             border-bottom: 1rem solid rgb(40, 203, 3);
-            color: red;
-            transition: 0.3s ease-in;
+            color: yellow;
+            transition: 0.27s ease-in;
           }
 
           .myDivT{
@@ -368,9 +380,12 @@
             font-size: 16px;
           }
           .myDivT:hover{
+            border-radius: 2rem;
+            border: 0.18rem solid #04123cac;
+            background: orangered;
             border-bottom: 1rem solid rgb(40, 203, 3);
-            color: red;
-            transition: 0.3s ease-in;
+            color: yellow;
+            transition: 0.27s ease-in;
           }
 
           .myDiv6{
@@ -392,9 +407,12 @@
             }
 
           .myDiv6:hover{
+            border-radius: 2rem;
+            border: 0.18rem solid #04123cac;
+            background: orangered;
             border-bottom: 1rem solid rgb(40, 203, 3);
-            color: red;
-            transition: 0.3s ease-in;
+            color: yellow;
+            transition: 0.27s ease-in;
           }
 
 
@@ -2339,6 +2357,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
