--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 
          .YIKI:hover{
           background: -webkit-linear-gradient(orangered 0%, yellow 100%);
-          transition: 0.66s ease;
+          transition: 0.27s ease-in;
           color: #000;
          }
 
@@ -2209,7 +2209,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <hr style=" color: rgb(13, 31, 136); justify-self: center;"> 
        
         <span style="background: transparent; font-family: 'georgia'; font-size: 25px; color: rgb(42, 61, 172); text-align: left;">
-          <strong>4. Changement climatique
+          <strong>4. Climat
           </strong>
         </span>
      
@@ -2357,6 +2357,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
