--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 0 1.7rem 1px rgba(174, 173, 173, 0.687);
+                 box-shadow: 0 0 1.5rem 1px rgba(197, 197, 197, 0.617);
                  border-bottom: 5.26rem solid #ffffff;  
           }
           
@@ -526,7 +526,7 @@ hr{
     flex-direction: column;
     width:100%;
     height: auto;
-    background: rgba(215, 215, 215, 0.882);
+    background: transparent;
     justify-content: center;
     align-items: center;
     padding: 10px;
