--- a/index.html
+++ b/index.html
@@ -1442,7 +1442,7 @@ function myFunction() {
       <a href="#Milieu">
           
         <div class="TYK1">
-        Accademie
+        Académie
           </div>
             
         </a>
@@ -1888,7 +1888,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
          pour ces enfants handicapés qui risquent de faire face à une suppression de leurs propres droits par leurs propres parents.  
         <br>
         <hr style="color: rgba(239, 54, 7, 0.977); justify-self: center;"> 
-        <b style="color:rgba(239, 54, 7, 0.977); font-size: 23px; font-family: georgia;">Accadémie Tiki N'Yiki</b> 
+        <b style="color:rgba(239, 54, 7, 0.977); font-size: 23px; font-family: georgia;">Académie Tiki N'Yiki</b> 
         <br>  
         Il est inimaginable de voir que de personnes handicapées ne soient pas à mesure de partir à l'hôpital quand elles tombent malades, aller étudier, partir au marché, aller au culte ou simplement sortir marcher à cause du manque de moyens de déplacement (transport). 
         <br>  
@@ -1902,7 +1902,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
           <img src="https://cdn-icons-png.flaticon.com/512/167/167707.png" alt="Icon of a school building">
         <figure>
             <figcaption style="font-family: 'arial'; font-size: 12px; color: #017ffe; margin-top: -1rem;">
-              Type de building pour l'Accadémie Tiki N'Yiki
+              Type de building pour l'Académie Tiki N'Yiki
             </figcaption>
           </figure>
       </figure>
@@ -1911,7 +1911,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
   <div class="KA"style="display: flex; justify-content: center; align-items: center; border-left: 0.45rem solid lightgrey;">
     <p style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 18px; color: #06749c; text-align: justify; padding: 14px; line-height: 22.85px;">
       Vu ces différentes difficultés faites de barrières sociales, d'insuffisance d'infractrustures, de services et de moyens de déplacements adaptés, Tiki N'Yiki envisage construire un établissement adapté d'étude nommé Accadémie Tiki N'Yiki pour soutenir les élèves et étudiant-es en situation de handicap.
-      Cette accadémie sera constituée de salles de classe, de chambres adaptées, de salles de conditionnement sportif, de salles de réunion, de bureaux et de cuisines pour assurer son bon fonctionnement. Les étudiant-es handicapé-es dont les familles habitent en campagne seront permis-es à rester dans les logements adaptés durant le cursus scolaire et bénéficieront de moyens de déplacement 
+      Cette académie accueillera des étudiant-es de différents grades et sera constituée de salles de classe, de chambres adaptées, de salles de conditionnement sportif, de salles de réunion, de bureaux et de cuisines pour assurer son bon fonctionnement. Les étudiant-es handicapé-es dont les familles habitent en campagne seront permis-es à rester dans les logements adaptés durant le cursus scolaire et bénéficieront de moyens de déplacement 
        pour la mobilité en cas de nécessité.
     </p>
    <br>
@@ -2356,6 +2356,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
