--- a/index.html
+++ b/index.html
@@ -294,8 +294,8 @@
             border: 0.18rem solid #0820685e;
             color:red;
             margin-top: 1.25rem;
-            font-family:Verdana, Geneva, Tahoma, sans-serif;
-            font-size: 16px;
+            font-family: 'arial black';
+            font-size: 15.85px;
             padding: 6px;
           }
 
@@ -323,8 +323,8 @@
             color:red;
             margin-top: 1.25rem;
             padding: 6px;
-            font-family:Verdana, Geneva, Tahoma, sans-serif;
-            font-size: 16px;
+            font-family:'arial black';
+            font-size: 15.85px;
           }
 
           .myDiv1:hover{
@@ -350,8 +350,8 @@
             color:red;
             margin-top: 1.25rem;
             padding: 6px;
-            font-family:Verdana, Geneva, Tahoma, sans-serif;
-            font-size: 16px;
+            font-family:'arial black';
+            font-size: 15.85px;
             }
 
           .myDiv2:hover{
@@ -377,8 +377,8 @@
             color:red;
             margin-top: 1.25rem;
             padding: 6px;
-            font-family:Verdana, Geneva, Tahoma, sans-serif;
-            font-size: 16px;
+            font-family:'arial black';
+            font-size: 15.85px;
           }
           .myDivT:hover{
             border-radius: 2rem;
@@ -399,8 +399,8 @@
             color:red;
             margin-top: 1.25rem;
             padding: 6px;
-            font-family:Verdana, Geneva, Tahoma, sans-serif;
-            font-size: 16px;
+            font-family:"arial black";
+            font-size: 15.85px;
             height: 40px;
             width: 100%;
             border-radius: 2rem;
@@ -568,7 +568,7 @@ hr{
     margin-bottom: 1rem;
     margin-top: 0.35rem;
     padding: 10px;
-    box-shadow: 0 1.2px 1.1rem 0 rgba(124, 124, 124, 0.988);
+  
 }
 .content1 a:hover{
     color: blue;
