--- a/index.html
+++ b/index.html
@@ -822,9 +822,9 @@ animation: auto 12s infinite ease-in;
     width: 74%;
     height: auto;
     line-height: 27px;
-    font-size: 20.5px; 
+    font-size: 17.5px; 
     color: rgba(8, 8, 8, 0.897);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+    font-family: helvetica; 
     word-spacing: 0.25px;
     padding: 10px;
 }
@@ -869,14 +869,13 @@ animation: auto 12s infinite ease-in;
 .kpt{
   width: 100%;
   height: auto;
-  font-family: 'verdana';
-  font-size: 13.5px;
-  line-height: 21px;
+  font-family: 'helvetica';
+  line-height: 23px;
   color: rgba(38, 38, 38, 0.948);
   word-spacing: 1.5px;
   opacity: 0.98;
   text-align: left;
-  font-family: 'Inter' sans sherif;
+  font-size: 16px; 
   padding: 7px;
   background: #fff;
   border-right: 0.25rem solid transparent;
@@ -942,9 +941,9 @@ animation: auto 12s infinite ease-in;
     width: 101%;
     height: auto;
     line-height: 27px;
-    font-size: 20.5px; 
+    font-size: 17.5px; 
     color: rgba(8, 8, 8, 0.897);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+    font-family: 'helvetica'; 
     word-spacing: 0.25px;
 }
 
@@ -1082,8 +1081,8 @@ height: 728px;
   background: rgba(38, 38, 38, 0.755); 
   border: 0.12rem solid #b3b3b3; 
   border-radius: 50%; 
-  font-family: 'georgia'; 
-  font-size: 20px; 
+  font-family: 'helvetica'; 
+  font-size: 18px; 
   line-height: 30px;
  
   cursor: pointer;
@@ -1200,9 +1199,9 @@ height: 225px;
   width: 100%;
   height: auto;
   line-height: 27px;
-    font-size: 20.5px; 
+    font-size: 17.5px; 
     color: rgba(8, 8, 8, 0.897);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+    font-family: 'helvetica'; 
     word-spacing: 0.25px;
     text-align: justify;
 }
@@ -1217,9 +1216,9 @@ height: 225px;
     width: 72.5%;
     height: auto;
     line-height: 27px;
-    font-size: 20.5px; 
+    font-size: 17.5px; 
     color: rgba(8, 8, 8, 0.897);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+    font-family: 'helvetica'; 
     word-spacing: 0.25px;
 }
 
@@ -1282,9 +1281,9 @@ transition: 0.26s linear;
   width: 100%;
   height: auto;
   line-height: 27px;
-    font-size: 20.5px; 
+    font-size: 17.5px; 
     color: rgba(8, 8, 8, 0.897);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
+    font-family: 'helvetica'; 
     word-spacing: 0.25px;
 }
 
@@ -1851,7 +1850,7 @@ Tiki N'Yiki veut travailler à changer ces mentalités, faire tomber des barriè
 <div class="NL">
 
   <div class="Noel">
-    <div style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; text-align: left; line-height: 21px; color:rgb(3, 118, 225); font-size: 19.45px;">
+    <div style="font-family:'helvetica'; text-align: left; line-height: 21.6px; color:rgb(3, 129, 246); font-size: 17.5px;">
       Noël est une célébration généralement adorée par beaucoup d'enfants. Pour ce faire Tiki N'Yiki organisait un arbre de Noël à l'approche de chaque 25 décembre (Jour de Nativité) pendant lequel
       les enfants étaient invités à un repas autour duquel une sensibilisation sur le handicap et l'inclusion est tenue et par la suite des questions sont posées afin de 
       recueillir leurs diverses réactions. 
@@ -1909,7 +1908,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     </div>
 
   <div class="KA"style="display: flex; justify-content: center; align-items: center; border-left: 0.45rem solid lightgrey;">
-    <p style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 18px; color: #06749c; text-align: justify; padding: 14px; line-height: 22.85px;">
+    <p style="font-family:'helvetica'; font-size: 17.5px; color: #0a76f2f3; text-align: justify; padding: 10px; line-height: 22.9px;">
       Vu ces différentes difficultés faites de barrières sociales, d'insuffisance d'infractrustures, de services et de moyens de déplacements adaptés, Tiki N'Yiki envisage construire un établissement adapté d'étude nommé Accadémie Tiki N'Yiki pour soutenir les élèves et étudiant-es en situation de handicap.
       Cette académie accueillera des étudiant-es de différents grades et sera constituée de salles de classe, de chambres adaptées, de salles de conditionnement sportif, de salles de réunion, de bureaux et de cuisines pour assurer son bon fonctionnement. Les étudiant-es handicapé-es dont les familles habitent en campagne seront permis-es à rester dans les logements adaptés durant le cursus scolaire et bénéficieront de moyens de déplacement 
        pour la mobilité en cas de nécessité.
