--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
   background: transparent; 
   border: 0.18rem solid #0820685e;
   border-radius: 2rem;
-  color:red;
+  color: red;
   padding: 6px;
   margin-top: 20px;
 }
@@ -218,7 +218,7 @@
 .TYK1:hover{
   border-radius: 2rem;
             border: 0.18rem solid #04123cac;
-            background: orangered;
+            background: red;
             border-bottom: 1rem solid rgb(40, 203, 3);
             color: yellow;
             transition: 0.29s ease-in;
@@ -302,7 +302,7 @@
           .myDiv:hover{
             border-radius: 2rem;
             border: 0.18rem solid #04123cac;
-            background: orangered;
+            background: red;
             border-bottom: 1rem solid rgb(40, 203, 3);
             color: yellow;
             transition: 0.29s ease-in;
@@ -330,7 +330,7 @@
           .myDiv1:hover{
             border-radius: 2rem;
             border: 0.18rem solid #04123cac;
-            background: orangered;
+            background: red;
             border-bottom: 1rem solid rgb(40, 203, 3);
             color: yellow;
             transition: 0.29s ease-in;
@@ -357,7 +357,7 @@
           .myDiv2:hover{
             border-radius: 2rem;
             border: 0.18rem solid #04123cac;
-            background: orangered;
+            background: red;
             border-bottom: 1rem solid rgb(40, 203, 3);
             color: yellow;
             transition: 0.29s ease-in;
@@ -383,7 +383,7 @@
           .myDivT:hover{
             border-radius: 2rem;
             border: 0.18rem solid #04123cac;
-            background: orangered;
+            background: red;
             border-bottom: 1rem solid rgb(40, 203, 3);
             color: yellow;
             transition: 0.29s ease-in;
@@ -410,7 +410,7 @@
           .myDiv6:hover{
             border-radius: 2rem;
             border: 0.18rem solid #04123cac;
-            background: orangered;
+            background: red;
             border-bottom: 1rem solid rgb(40, 203, 3);
             color: yellow;
             transition: 0.29s ease-in;
