--- a/index.html
+++ b/index.html
@@ -1162,6 +1162,7 @@ a:visited{
   width: 100%;
   height: auto;
   padding: 5px;
+  border-top: 0.1rem solid #000;
 }
 .DUQUE1{
   display: grid; 
@@ -1214,7 +1215,7 @@ height: 215px;
     justify-content: center;
     text-align: justify;
     width: 72.5%;
-    height: 800px;
+    height: auto;
     line-height: 27px;
     font-size: 17.5px; 
     color: rgba(8, 8, 8, 0.897);
@@ -1230,7 +1231,7 @@ height: 215px;
   justify-content: space-between;
   justify-items: center;
   width: 100%;
-  height: 230px;
+  height: auto;
   line-height: 27px;
     font-size: 20.5px; 
     color: rgba(8, 8, 8, 0.897);
@@ -1240,14 +1241,14 @@ height: 215px;
 
 .CHRZiniare {
   width: 100%;
-  height: 220px;
+  height: 240px;
   border-bottom: 0.5rem solid #017ffe;
 }
 
 
 .CHRZiniare img{
   width: 100%;
-  height: 220px;
+  height: 240px;
 }
 .CHRZiniare:hover{
 transition: 0.26s linear;
@@ -1256,14 +1257,14 @@ transition: 0.26s linear;
 }
 .MediKLogo img{
   width: 100%;
-  height: 220px;
+  height: 240px;
 }
 
 
 
 .MediKLogo{
   width: 100%;
-  height: 220px;
+  height: 240px;
   border-bottom: 0.5rem solid #017ffe;
   }
 
@@ -1287,6 +1288,7 @@ transition: 0.26s linear;
     font-family: 'helvetica'; 
     word-spacing: 0.25px;
     margin-top: 1.5rem;
+    border-top: 0.1rem solid #000;
 }
 
 .Avenue{
@@ -2157,7 +2159,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
        
 <div class="SEKU">
       <div>
-        <hr style=" color: rgb(13, 31, 136); justify-self: center;"> 
+       
  <br> <br>
         <span style="background: transparent; font-family: 'georgia'; font-size: 25px; color: rgb(42, 61, 172); text-align: left;">
           <strong>3. Sécurité Alimentaire
