--- a/index.html
+++ b/index.html
@@ -1279,6 +1279,7 @@ transition: 0.26s linear;
   display: grid;
   grid-template-rows: 0.01fr 0.01fr;
   justify-content: space-between;
+  row-gap: 1.5rem;
   justify-items: center;
   width: 100%;
   height: auto;
@@ -2386,6 +2387,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
