--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
     }
 
     .Translator:hover{
-      transition: 0.3s ease-in;
+      transition: 0.25s linear;
       width: 100%;
-      color: cyan;
+      color: #000;
     }
 
     .Calculator{
@@ -134,9 +134,9 @@
     }
 
     .Calculator:hover{
-      transition: 0.3s ease-in;
+      transition: 0.25s linear;
       width: 100%;
-      color: cyan;
+      color: #000;
     }
     
     .dico{
@@ -154,9 +154,9 @@
     }
 
     .dico:hover{
-      transition: 0.3s ease-in;
+      transition: 0.25s linear;
       width: 100%;
-      color: cyan;
+      color: #000;
     }
 
     .datime{
@@ -174,9 +174,9 @@
     }
 
     .datime:hover{
-      transition: 0.3s ease-in;
+      transition: 0.25s linear;
       width: 100%;
-      color: cyan;
+      color: #000;
     }
 
     
@@ -185,7 +185,7 @@
       grid-template-rows: 0.85fr 0.8fr 0.5fr 0.95fr;
                  justify-content: center;
                  justify-items: center;
-                 background: rgba(63, 95, 254, 0.944);
+                 background: rgba(52, 120, 255, 0.94);
                  width: 100%;
                  height: 115px;
                  object-fit: cover;
@@ -2387,6 +2387,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
