--- a/index.html
+++ b/index.html
@@ -1717,7 +1717,7 @@ function myFunction() {
         arriver au changement positif des conditions sociales de vie.
         <br> 
         <br>
-        Par contre avec une population croissante de plus de 3 226 627 de personnes handicapées  <a href="https://www.adry.up.ac.za/section-b-country-reports-2022/republique-du-burkina-faso" style="font-size: 18px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 22px;" target="_blank">[Sources: African Disability - 2020 Rights Yearbook =>Burkina Faso =>1) Les Indicateurs Démographiques =>1.3) Nombre Total et Pourcentage des Personnes Handicapées au Burkina Faso]</a> dont le handicap est généralement causé soit par la Polio (poliomyétlie), soit d'autres maladies, soit de vieillesse et/ou de cas accidentels, il est encore fréquent d'observer que de nombreuses personnes handicapées sont sous-estimées, négligées, discriminées et livrées à elles-mêmes. 
+        Par contre avec une population croissante de plus de 3 226 627 de personnes handicapées  <a href="https://www.adry.up.ac.za/section-b-country-reports-2022/republique-du-burkina-faso" style="font-size: 18px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 22px;" target="_blank">[Sources: African Disability Rights - Yearbook =>Burkina Faso =>1) Les Indicateurs Démographiques =>1.3) Nombre Total et Pourcentage des Personnes Handicapées au Burkina Faso]</a> dont le handicap est généralement causé soit par la Polio (poliomyétlie), soit d'autres maladies, soit de vieillesse et/ou de cas accidentels, il est encore fréquent d'observer que de nombreuses personnes handicapées sont sous-estimées, négligées, discriminées et livrées à elles-mêmes. 
         <br> 
         <br> 
         Ceci n'est pas seulement un fait causé par une culture toxique d'exclusion dûe aux discriminations et barrières sociales,
@@ -2393,6 +2393,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
