--- a/index.html
+++ b/index.html
@@ -1100,6 +1100,7 @@ height: 728px;
 a:visited{
   color: rgba(255, 18, 145, 0.94);
 }
+
 .Ecole{
   display: grid;
   grid-template-columns: 0.7fr 1.3fr;
@@ -1107,7 +1108,8 @@ a:visited{
   justify-content: center;
   justify-items: center;  
   width: 100%; 
-  height: 24%;
+  height: 25%;
+  padding: 10px;
 }
 
 .AK{
@@ -1912,7 +1914,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         <br>
         <br>
         <a href="https://thumbs.dreamstime.com/b/golden-graduation-cap-diploma-d-illustration-isolated-white-background-36184349.jpg" target="_blank">
-        <div class="Ecole">
+        
+          <div class="Ecole">
 
         <div class="AK">
           <img src="https://cdn-icons-png.flaticon.com/512/167/167707.png" alt="Icon of a school building">
