--- a/index.html
+++ b/index.html
@@ -1225,7 +1225,8 @@ height: 215px;
     color: rgba(8, 8, 8, 0.897);
     font-family: 'helvetica'; 
     word-spacing: 0.25px;
-    border-top: 0.12rem solid #7f7f7fa7;
+    border-top: 0.12rem solid #000;
+    margin-top: 0.5rem;
 }
 
 .Healthy{
