--- a/index.html
+++ b/index.html
@@ -2148,11 +2148,11 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     <div class="CHRZiniare">
       
     <img src="https://www.zupimages.net/up/23/16/0k53.jpg" alt="Emergency Montreal Hospital">
-    <figure>
+    <figure> <a name="SEKU"></a>
       <figcaption style=" color: #017ffe; font-family: 'verdana'; font-size: 16px; text-align: left; margin-top: 3px;">
         Centre Hospitalier Régional de Ziniaré
         </figcaption>
-        <a name="SEKU"></a>
+       
 </figure>
 
         </div>
@@ -2399,6 +2399,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
