--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@ animation: auto 12s infinite ease-in;
   justify-content: space-between;
   width: 74%;
   height: auto;
-  border-top: 0.3rem solid #0c63ef;
+  border-top: 2rem solid rgba(52, 120, 255, 0.908); 
   margin-top: 1rem;
 }
 
