--- a/index.html
+++ b/index.html
@@ -865,7 +865,13 @@ animation: auto 12s infinite ease-in;
   width: 74%;
   height: auto;
   border-top: 2rem solid rgba(52, 120, 255, 0.908); 
+  border-right: 0.14rem solid rgba(52, 120, 255, 0.908);
+  border-left: 0.14rem solid rgba(52, 120, 255, 0.908);
+  border-bottom: 0.14rem solid rgba(52, 120, 255, 0.908);
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
   margin-top: 1rem;
+  padding: 5px;
 }
 
 .kpt{
@@ -2399,6 +2405,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
