--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
           flex-direction: column; 
           justify-content: center; 
           align-items: center; 
-          background: -webkit-linear-gradient(rgba(4, 1, 192, 0.963), rgba(4, 1, 192, 0.425));
-          color:cyan; 
+          background: -webkit-linear-gradient(orangered 0%, yellow 100%);
+          color:#000; 
           width: auto; 
           height: 74.48px; 
           padding: 13px; 
@@ -276,9 +276,9 @@
          }
 
          .YIKI:hover{
-          background: -webkit-linear-gradient(orangered 0%, yellow 100%);
+          background: #000;
           transition: 0.27s ease-in;
-          color: #000;
+          color: #fff;
          }
 
           .myDiv{
@@ -2400,6 +2400,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
