--- a/index.html
+++ b/index.html
@@ -2343,11 +2343,11 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                       En 2017 il était obligé de s'exiler au Canada pour des raisons sécuritaires si bien que certaines activités de Tiki N'Yiki y compris le volet EDUCATION ont été interrompues mais vont être redéfinies si les conditions sont réunies. 
                       <br>
                       <br>
-                      Résident permanent Canadien, il se reconstruit une nouvelle autre vie. Entre autres, il écrit ses mémoires et apprend à écrire du code informatique tout en souhaitant se former aux I-Tech sciences et être bien établi. Il est en train de coder ce site web pour mieux présenter sa vision pour Tiki N'Yiki. 
+                      Résident permanent Canadien, il se reconstruit une nouvelle autre vie. Entre autres, il écrit ses mémoires et apprend à écrire du code informatique tout en souhaitant se former aux sciences des nouvelles technologies. Il est le développeur de ce site internet pour mieux présenter sa vision pour Tiki N'Yiki. 
                       <br>
                       <br>
-                      Ainsi Gabriel veut créer une fondation dont le but sera de supporter vigoureusement l'éducation et l'inclusion sociale des personnes handicapées afin de leur créer des opportunités dans leurs communautés <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank"> au Burkina Faso.</a>
-                     Il est passionné de la nature, de photographie, d'histoire, de géographie, d'architecture, de cyclisme, de football (soccer) et de hockey sur glace.
+                       Gabriel veut créer une fondation pour soutenir l'éducation des enfants handicapés afin de leur créer des opportunités pour une meilleure inclusion sociale <a href="https://fr.wikipedia.org/wiki/Burkina_Faso" target="_blank"> au Burkina Faso.</a>
+                     Il aime la nature, la photographie, l'histoire, la géographie, l'architecture, le cyclisme, le football (soccer) et le hockey sur glace.
                     </p>      
       </div>
 
@@ -2400,6 +2400,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
