--- a/index.html
+++ b/index.html
@@ -2060,7 +2060,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     <b style="color: green">C. Des activités d'éducation et de conscientisation</b> consistant à sensibiliser l'opinion publique sur le HANDICAP et l'inclusion et l'importance pour les personnes différentes qui sont avant tout des humains d'être inclues dans leurs communautés.
     <br>
     <br>
-    <b style="color: green">D. Des activités liées aux journées d'excellence et de récompense</b> Sélection d'un-e étudiant-e handicapé-e comme bénéficiaire d'une bourse d'étude dénommée <a href="https://fr.wikipedia.org/wiki/Bourse_d%27%C3%A9tudes" style="font-size: 18px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 22px;" target="_blank">Bourse Tiki N'Yiki</a> dont les critères de sélection sont basés sur l'excellence entre autres et permettrait au récipiendaire de s'inscrire à un programme universitaire de son choix. Les étudiant-es handicapé-es issu-es de familles à faibles revenus sont prioritaires (Condition Obligatoire).
+    <b style="color: green">D. Des activités liées aux journées d'excellence et de récompense</b> Sélection d'un-e étudiant-e handicapé-e comme bénéficiaire d'une bourse d'étude dénommée <a href="https://fr.wikipedia.org/wiki/Bourse_d%27%C3%A9tudes" style="font-size: 18px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; line-height: 22px;" target="_blank">Bourse Tiki N'Yiki</a> dont les critères de sélection sont basés sur l'excellence entre autres et permettrait au récipiendaire de s'inscrire à un programme universitaire de son choix. Les étudiant-es handicapé-es issu-es de familles à faibles revenus sont prioritaires.
     
      </p>  
      
@@ -2400,23 +2400,4 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
