--- a/index.html
+++ b/index.html
@@ -1076,11 +1076,11 @@ height: 728px;
     background:green;
     color: #ff0;
     transition: 0.3s linear;
-  box-shadow: 6px 6px 0.6rem 0.15px red;
+    box-shadow: 6px 6px 0.6rem 0.15px red;
 }
 .FTR{
-  width: 45%; 
-  height: 89%; 
+  width: 500px; 
+  height: 350px; 
   display: flex; 
   position: relative;
   flex-direction: column;
@@ -1090,18 +1090,18 @@ height: 728px;
   border: 0.12rem solid #b3b3b3; 
   border-radius: 50%; 
   font-family: 'helvetica'; 
-  font-size: 18px; 
+  font-size: 22px; 
   line-height: 30px;
- 
   cursor: pointer;
+  padding: 20px;
 }
 
 .FTR:hover{
-  border: 0.15rem solid rgb(201, 54, 0); 
+  border: 0.12rem solid rgb(201, 54, 0); 
   background: #212121f0;
-  transition: 0.3s linear;
+  transition: 0.28s linear;
   color: yellow;
-  box-shadow: 10px 5px 1.15rem 0.1px orangered;
+  box-shadow: 10px 8px 1.15rem 0.1px orangered;
 }
 a:visited{
   color: rgba(255, 18, 145, 0.94);
@@ -2366,13 +2366,13 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
    
 
     <div class="Thanking" style="padding: 1rem;"> <b style="font-family: georgia; color: rgba(0, 69, 187, 0.996); font-size: 20px">
-      Merci pour votre attention et vos différents soutiens ! 
+      Merci pour votre attention et vos réactions ! 
     </b>
   </div>
 
   <a href="#Top">
     <div class="SPan">
-        <span style="justify-self: center;"> <b>Remonter La Page</b></span>
+        <span style="justify-self: center;"> <b>Remonter la Page</b></span>
     </div>
 </a>
 </div>
@@ -2381,23 +2381,24 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 
 <div class="footer">
 
-
+  <a href="https://lefaso.net/spip.php?article119166" target="_blank"> 
+     
     <div class="FTR">
-      <a href="https://lefaso.net/spip.php?article119166" target="_blank"> 
+      
     Le Handicap n'est pas une Fatalité !
-  
     <br>
     <br>
     <br>
     <br>
     Copyright © Tiki N'Yiki 2023 
-  </a>
+  
 </div>
-
+</a>
 
 </div>
 
 </body>
 
 </html>
+
 
