--- a/index.html
+++ b/index.html
@@ -2354,8 +2354,8 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       <div class="kgp">
         <img src="https://www.zupimages.net/up/23/28/kkoy.jpg" alt="At office">
       <figure>
-        <figcaption style="font-family: 'helvetica'; font-size: 12px; color: rgb(71, 71, 71); margin-top: -4.5rem;">
-        <b> Le handicap n'est pas une fatalité !</b>
+        <figcaption style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 15px; margin-top: -4.5rem;">
+        <b style="color:#0149fe"> Le handicap n'est pas une fatalité !</b>
       </figcaption> 
     </figure>
         </div>
@@ -2398,6 +2398,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
 </body>
 
 </html>
+
 
 
 
